[plugins] multiple Refs in PluginInstaller replaced with ThrowableComputable results
GitOrigin-RevId: 460f6644a39e5d872e6dc6db1f6f8a539b07f3e7