@@ -172,7 +172,8 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
       PluginId pluginId = pendingPluginInstall.getPluginDescriptor().getPluginId();
       if (!uninstallsRequiringRestart.contains(pluginId)) {
         InstalledPluginsState.getInstance().trackPluginInstallation(() -> {
-          if (!PluginInstaller.installAndLoadDynamicPlugin(pendingPluginInstall.getFile(), parent,
+          if (!PluginInstaller.installAndLoadDynamicPlugin(pendingPluginInstall.getFile(),
+                                                           parent,
                                                            pendingPluginInstall.getPluginDescriptor())) {
             dynamicPluginsRequiringRestart.add(pluginId);
           }
@@ -344,7 +345,7 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
                              @Nullable IdeaPluginDescriptor updateDescriptor,
                              @NotNull ModalityState modalityState) {
     IdeaPluginDescriptor actionDescriptor = updateDescriptor == null ? descriptor : updateDescriptor;
-    if (!PluginManagerMain.checkThirdPartyPluginsAllowed(Collections.singletonList(actionDescriptor))) {
+    if (!PluginManagerMain.checkThirdPartyPluginsAllowed(List.of(actionDescriptor))) {
       return;
     }
 
@@ -391,7 +392,7 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
       pluginNode.setDependencies(actionDescriptor.getDependencies());
       pluginNode.setRepositoryName(PluginInstaller.UNKNOWN_HOST_MARKER);
     }
-    List<PluginNode> pluginsToInstall = ContainerUtil.newArrayList(pluginNode);
+    List<PluginNode> pluginsToInstall = List.of(pluginNode);
 
     PluginManagerMain.suggestToEnableInstalledDependantPlugins(this, pluginsToInstall);
 
@@ -442,7 +443,9 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
         .invokeLater(() -> {
           boolean dynamicRestartRequired = false;
           for (PendingDynamicPluginInstall install : pluginsToInstallSynchronously) {
-            boolean installedWithoutRestart = PluginInstaller.installAndLoadDynamicPlugin(install.getFile(), myInstalledPanel, install.getPluginDescriptor());
+            boolean installedWithoutRestart = PluginInstaller.installAndLoadDynamicPlugin(install.getFile(),
+                                                                                          myInstalledPanel,
+                                                                                          install.getPluginDescriptor());
             if (installedWithoutRestart) {
               IdeaPluginDescriptor installedDescriptor = PluginManagerCore.getPlugin(info.getDescriptor().getPluginId());
               if (installedDescriptor != null) {
@@ -1034,7 +1037,7 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
     }
   }
 
-  private boolean performUninstall(IdeaPluginDescriptorImpl descriptorImpl) {
+  private boolean performUninstall(@NotNull IdeaPluginDescriptorImpl descriptorImpl) {
     boolean needRestartForUninstall = true;
     try {
       descriptorImpl.setDeleted(true);
